--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
-  }
+  },
+  "scripts": {
+  "start": "node index.js"
+}
+
 }
