--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+      "license": "MIT"
   },
   "scripts": {
     "start": "node index.js"
