--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
-    "typescript": "^5.6.2",
-      "license": "MIT"
+    "typescript": "^5.6.2"
   },
   "scripts": {
     "start": "node index.js"
